# BRender

./: .gitignore  CMakePresets.json
.github/workflows/: build.yml
core/fmt/: CMakeLists.txt  animgltf.c  loadgltf.c
core/fmt/include/: fmt.h  fmt_p.h
core/inc/: animation.h  v1db_p.h
core/v1db/: animation.c
drivers/: CMakeLists.txt
drivers/csoftprim/: CMakeLists.txt  drv.h  drv_ip.h  match.c  plib.c  plib.h  safediv.c  tri_render.c
drivers/softrend/: v1model.c
drivers/softrend/ddi/: priminfo.h
drivers/vfxprim/: CMakeLists.txt  device.c  device.h  driver.c  drv.h  drv_ip.h  match.c  match.h  object.c  object.h  plib.c  plib.h  pstate.c  pstate.h  sbuffer.c  sbuffer.h  template.h  timestmp.h  tri_vfx.c  vfx_compat.h  vfx_poly_flat.c  vfx_poly_gouraud.c  vfx_poly_illum.c  vfx_poly_map.c  vfx_poly_xlat.c  vfx_port.h  vfx_port_core.c  work.c  work.h
examples/: CMakeLists.txt
examples/cube/: CMakeLists.txt  main.c
examples/gltfview/: CMakeLists.txt  camera_fps.c  camera_fps.h  gltf_to_br.c  gltf_to_br.h  ground_sky.c  ground_sky.h  main.c  vendor_impl.c
examples/softcube/: main.c
